# nwload

./: .gitignore  requirements.md  simulate.py  simulate_advanced.py  start.bat  test_packet_format.py
cell_traffic_optimizer/: config.yaml  main.py  pyproject.toml  railway.toml  requirements.txt
cell_traffic_optimizer/src/cell_traffic_optimizer/aggregator/: __init__.py  band_mapper.py  traffic_aggregator.py
cell_traffic_optimizer/src/cell_traffic_optimizer/config/: __init__.py  config_manager.py
cell_traffic_optimizer/src/cell_traffic_optimizer/controller/: __init__.py  onvif_client.py  quality_controller.py
cell_traffic_optimizer/src/cell_traffic_optimizer/data/: __init__.py  camera_registry.py  device_camera_mapping.py  device_registry.py  event_store.py  history_store.py
cell_traffic_optimizer/src/cell_traffic_optimizer/evaluator/: __init__.py  cell_load_evaluator.py
cell_traffic_optimizer/src/cell_traffic_optimizer/models/: __init__.py  config.py  core.py  enums.py  history.py  registry.py
cell_traffic_optimizer/src/cell_traffic_optimizer/parser/: __init__.py  event_converter.py  packet_parser.py
cell_traffic_optimizer/src/cell_traffic_optimizer/pipeline/: __init__.py  data_pipeline.py
cell_traffic_optimizer/src/cell_traffic_optimizer/server/: app.py  broadcast.py  deps.py  schemas.py  state.py
cell_traffic_optimizer/tests/: test_band_mapper.py  test_cell_load_evaluator.py  test_integration.py  test_models.py  test_packet_parser.py  test_state_machines.py  test_traffic_aggregator.py
docs/: packet_interface_spec.md
frontend/: package-lock.json  (+1 more)
(+38 files in other folders)
