[project]
name = "cell-traffic-optimizer"
version = "0.1.0"
description = "LTE/5G cell traffic monitoring and ONVIF-based camera quality control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.115.0",
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_traffic_optimizer"]

[project.scripts]
cell-traffic-optimizer = "cell_traffic_optimizer.server.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
