[project]
name = "cell-traffic-optimizer"
version = "0.1.0"
description = "LTE/5G cell traffic monitoring and ONVIF-based camera quality control"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
